# maikol-solis.github.io

./: .gitignore  CNAME  README.md  _quarto.yml  index.qmd  pyproject.toml  sobre-mi.qmd
.github/workflows/: publish.yml
blog/: _metadata.yml  index.qmd
blog/mi-primer-post/: index.qmd
proyectos/: _metadata.yml  index.qmd
proyectos/1-ejercicio-sql/: index.ipynb
proyectos/churn-telecom/: borrar-index.ipynb
proyectos/eda-inmobiliario/: index.ipynb
proyectos/sentimiento-nlp/: index.ipynb
scripts/: preparar_notebook.py
styles/: custom.scss
