[project]
name = "modelo-portafolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "sqlite-utils>=3.39",
]
